examples/container_deny_added_caps/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenyaddedcaps
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyAddedCaps
  targets:
  - libs:
    - |-
      package lib.core

      import future.keywords.if

      default is_gatekeeper := false

      is_gatekeeper if {
        has_field(input, "review")
        has_field(input.review, "object")
      }

      resource := input.review.object if {
        is_gatekeeper
      }

      resource := input if {
        not is_gatekeeper
      }

      format(msg) := {"msg": msg}

      format_with_id(msg, id) := {
        "msg": sprintf("%s: %s", [id, msg]),
        "details": {"policyID": id},
      }

      apiVersion := resource.apiVersion

      name := resource.metadata.name

      kind := resource.kind

      labels := resource.metadata.labels

      annotations := resource.metadata.annotations

      gv := split(apiVersion, "/")

      group := gv[0] if {
        contains(apiVersion, "/")
      }

      group := "core" if {
        not contains(apiVersion, "/")
      }

      version := gv[count(gv) - 1]

      has_field(obj, field) if {
        not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) if {
        obj[field] == ""
      }

      missing_field(obj, field) if {
        not has_field(obj, field)
      }
    - |-
      package lib.pods

      import future.keywords.contains
      import future.keywords.if

      import data.lib.core

      default pod := false

      pod := core.resource.spec.template if {
        pod_templates := ["daemonset", "deployment", "job", "replicaset", "replicationcontroller", "statefulset"]
        lower(core.kind) == pod_templates[_]
      }

      pod := core.resource if {
        lower(core.kind) == "pod"
      }

      pod := core.resource.spec.jobTemplate.spec.template if {
        lower(core.kind) == "cronjob"
      }

      containers contains container if {
        keys := {"containers", "initContainers"}
        all_containers := [c | some k; keys[k]; c = pod.spec[k][_]]
        container := all_containers[_]
      }

      volumes contains pod.spec.volumes[_]
    - |-
      package lib.security

      import future.keywords.if

      dropped_capability(container, cap) if {
        lower(container.securityContext.capabilities.drop[_]) == lower(cap)
      }

      dropped_capability(psp, cap) if {
        lower(psp.spec.requiredDropCapabilities[_]) == lower(cap)
      }

      added_capability(container, cap) if {
        lower(container.securityContext.capabilities.add[_]) == lower(cap)
      }

      added_capability(psp, cap) if {
        lower(psp.spec.allowedCapabilities[_]) == lower(cap)
      }

      added_capability(psp, cap) if {
        lower(psp.spec.defaultAddCapabilities[_]) == lower(cap)
      }
    rego: |-
      package container_deny_added_caps

      import data.lib.core
      import data.lib.pods
      import data.lib.security
      import future.keywords.contains
      import future.keywords.if

      policyID := "P1001"

      violation contains msg if {
        some container
        pods.containers[container]
        not container_dropped_all_capabilities(container)

        msg := core.format_with_id(
          sprintf("%s/%s/%s: Does not drop all capabilities", [core.kind, core.name, container.name]),
          policyID,
        )
      }

      container_dropped_all_capabilities(container) if {
        security.dropped_capability(container, "all")
      }
    target: admission.k8s.gatekeeper.sh
status: {}
